Get access token from headers
